--- a/index.html
+++ b/index.html
@@ -30,191 +30,111 @@
 								</a> -->
 
 				<!-- Nav -->
-				<!-- <nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav> -->
+				<nav>
+					<ul>
+						<li><a href="#menu">Menu</a></li>
+					</ul>
+				</nav>
 
 			</div>
 		</header>
+		<nav id="menu">
+			<h2>Menu</h2>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="https://github.com/Adrian-Walker/exercise-tracker">Exercise Tracker Repo</a></li>
+				<li><a href="https://github.com/Adrian-Walker/Album-Ranker">Album Ranker Repo</a></li>
+				<!-- <li><a href="https://github.com/Adrian-Walker/weather-app">Weather App Repo</a></li> -->
+			</ul>
+		</nav>
 
-		<!-- Menu
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav> -->
 
-		<!-- Main -->
+
 		<div id="main">
 			<div class="inner">
 				<header id="name">
 					<h1>Adrian Walker</h1>
-					<p>Web Developer | Avid Sports Fan | Problem Solver</p>
-					<p>Full Stack MERN Web Developer</p>
+					<h3>Web Developer | Building better apps to help others live out their fullest potential</h3>
+					<button class="contact-button" onclick="window.location.href='#contact-section'">Contact
+						Now</button>
 				</header>
+				<h1 class="projects">Projects</h1>
 				<section class="tiles">
-					<article class="style1">
+					<article class="style2">
 						<span class="image">
 							<img src="images/pic01.jpg" alt="" />
 						</span>
-						<a href="generic.html">
-							<h2>Weather App</h2>
+						<a href="exercise-tracker.html">
+							<h2>Exercise Tracker</h2>
 							<div class="content">
-								<ul>
+								<ul class="ranker">
+									<li>MongoDB</li>
+									<li>Express</li>
 									<li>React</li>
-									<li>Javascript</li>
-									<li>Css</li>
+									<li>Node</li>
+									<li>Helmet</li>
+									<li>Cors</li>
+									<li>Morgan</li>
 								</ul>
 							</div>
 						</a>
 					</article>
-					<article class="style2">
+
+
+					<article class="style4">
 						<span class="image">
 							<img src="images/pic02.jpg" alt="" />
 						</span>
-						<a href="generic.html">
-							<h2>Lorem</h2>
+						<a href="album-ranker.html">
+							<h2>Album Ranker App</h2>
 							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+								<ul class="ranker">
+									<li>MongoDB</li>
+									<li>Express</li>
+									<li>React</li>
+									<li>Node</li>
+									<li>Morgan</li>
+								</ul>
 							</div>
 						</a>
 					</article>
-					<article class="style3">
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Feugiat</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style4">
-						<span class="image">
-							<img src="images/pic04.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Tempus</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<!-- <article class="style5">
-						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Aliquam</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style6">
-						<span class="image">
-							<img src="images/pic06.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Veroeros</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article> -->
-					<!-- <article class="style2">
-						<span class="image">
-							<img src="images/pic07.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Ipsum</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style3">
-						<span class="image">
-							<img src="images/pic08.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Dolor</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style1">
-						<span class="image">
-							<img src="images/pic09.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Nullam</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article> -->
-					<!-- <article class="style5">
-						<span class="image">
-							<img src="images/pic10.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Ultricies</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style6">
-						<span class="image">
-							<img src="images/pic11.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Dictum</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style4">
-						<span class="image">
-							<img src="images/pic12.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Pretium</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article> -->
 				</section>
 			</div>
+		</div>
+
+		<div>
+			<h1 class="projects">
+				About Me
+			</h1>
+			<p class="about-me">
+				There’s nothing better than starting out with a blank Javascript file and seeing the end result of
+				everything coming together.
+
+				As a critical thinker, web development is fascinating to me. Whether i’m coding, playing sports, gaming,
+				or researching new health & fitness routines, I’m constantly breaking things down to fully understand
+				things. I’m at my best when i’m able to mentor younger kids so they can discover and live out their
+				fullest potential.
+			</p>
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
-				<section>
-					<h2>Get in touch</h2>
-					<form method="post" action="#">
+				<section id="contact-section">
+					<h2>I Look Forward To Hearing From You</h2>
+					<form method="post" action="mailto:awalker3365@gmail.com" class="contact-form"
+						enctype="multipart/form-data" name="EmailForm">
 						<div class="fields">
 							<div class="field half">
-								<input type="text" name="name" id="name" placeholder="Name" />
+								<input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
 							</div>
 							<div class="field half">
-								<input type="email" name="email" id="email" placeholder="Email" />
+								<input type="email" name="email" id="email" placeholder="Email" autocomplete="off" />
 							</div>
+							<input type="hidden" name="_next" value="contact.html">
 							<div class="field">
-								<textarea name="message" id="message" placeholder="Message"></textarea>
+								<textarea name="message" id="message" placeholder="Message"
+									autocomplete="off"></textarea>
 							</div>
 						</div>
 						<ul class="actions">
@@ -233,15 +153,17 @@
 						</li>
 						<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a>
 						</li> -->
-						<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">500px</span></a></li>
+						<li><a href="https://github.com/Adrian-Walker" class="icon brands style2 fa-github"><span
+									class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/walker-adrian/"
+								class="icon brands style2 fa-linkedin"><span class="label">500px</span></a></li>
 						<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
 						<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 				</section>
 				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Adrian Walker</li>
+					<li></li>
 				</ul>
 			</div>
 		</footer>
