--- a/album-ranker.html
+++ b/album-ranker.html
@@ -44,25 +44,24 @@
             <h2>Menu</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://github.com/Adrian-Walker/exercise-tracker">Exercise Tracker Repo</a></li>
-                <li><a href="https://github.com/Adrian-Walker/Album-Ranker">Album Ranker Repo</a></li>
                 <!-- <li><a href="https://github.com/Adrian-Walker/weather-app">Weather App Repo</a></li> -->
             </ul>
         </nav>
 
         <!-- Main -->
-        <div id="main">
+        <div id="main" class="pages">
             <div class="inner">
                 <!-- <h1>Project #1</h1> -->
                 <h1>Album Ranker App</h1>
+<p>Engineered an app that allows users to rank newly released music and organize their favorite music by genre.</p>
 
-                <article class="style4">
+<article class="style4">
                     <span class="image">
                         <a href="https://album-ranker.netlify.app/">
-                            <img class="screenshots" src="screenshots/Screen Shot 2022-03-24 at 8.55.09 PM.png" />
+                            <img class="screenshots" src="screenshots/albumRanker.png" />
                         </a>
                         <ul>
-                            <h3>Tecnhologies Used</h3>
+                            <h3>Technologies Used</h3>
                             <li>Express</li>
                             <li>Mongoose</li>
                             <li>Morgan</li>
@@ -74,7 +73,6 @@
                     </a>
                     <button onclick="location.href='https://album-ranker.netlify.app/'">View Live</button>
                     <button onclick="location.href='https://github.com/Adrian-Walker/Album-Ranker'">View Code</button>
-                    <button onclick="window.location.href='#contact-section'" class="contact-now">CONTACT NOW</button>
                 </article>
             </div>
 
@@ -107,10 +105,10 @@
                     <section>
                         <h2>Follow</h2>
                         <ul class="icons">
-                            <li><a href="https://www.linkedin.com/in/walker-adrian/"
+                            <li><a href="https://www.linkedin.com/in/walker-adrian/" target="_blank"
                                     class="icon brands style2 fa-linkedin"><span class="label">Twitter</span></a>
                             </li>
-                            <li><a href="https://github.com/Adrian-Walker" class="icon brands style2 fa-github"><span
+                            <li><a href="https://github.com/Adrian-Walker" target="_blank" class="icon brands style2 fa-github"><span
                                         class="label">GitHub</span></a>
                             </li>
                             </li>
