--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
 								</a> -->
 
 				<!-- Nav -->
-				<nav>
-					<ul>
-						<li><a href="#menu">Menu</a></li>
-					</ul>
-				</nav>
+
 
 			</div>
 		</header>
@@ -53,28 +49,41 @@
 		<div id="main">
 			<div class="inner">
 				<header id="name">
-					<h1>Adrian Walker</h1>
-					<h3>Web Developer | Building better apps to help others live out their fullest potential</h3>
+					<div>
+						<h1>Adrian Walker</h1>
+						<h4>Web Developer Striving To Build Life Changing Apps</h4>
+					</div>
+
 					<button class="contact-button" onclick="window.location.href='#contact-section'">Contact
 						Now</button>
 				</header>
 				<h1 class="projects">Projects</h1>
 				<section class="tiles">
-					<article class="style2">
+
+					<article class="style1">
+						<span class="image">
+							<img src="images/pic03.jpg" alt="" />
+						</span>
+						<a href="weather.html">
+							<h2>Quote Generator</h2>
+							<div class="content">
+								<ul class="ranker">
+									<li>View Now</li>
+								</ul>
+							</div>
+						</a>
+					</article>
+
+
+					<article class="style1">
 						<span class="image">
 							<img src="images/pic01.jpg" alt="" />
 						</span>
-						<a href="exercise-tracker.html">
-							<h2>Exercise Tracker</h2>
+						<a href="weather.html">
+							<h2>Weather App</h2>
 							<div class="content">
 								<ul class="ranker">
-									<li>MongoDB</li>
-									<li>Express</li>
-									<li>React</li>
-									<li>Node</li>
-									<li>Helmet</li>
-									<li>Cors</li>
-									<li>Morgan</li>
+									<li>View Now</li>
 								</ul>
 							</div>
 						</a>
@@ -89,11 +98,7 @@
 							<h2>Album Ranker App</h2>
 							<div class="content">
 								<ul class="ranker">
-									<li>MongoDB</li>
-									<li>Express</li>
-									<li>React</li>
-									<li>Node</li>
-									<li>Morgan</li>
+						<li>View Now</li>
 								</ul>
 							</div>
 						</a>
@@ -103,10 +108,10 @@
 		</div>
 
 		<div>
-			<h1 class="projects">
+			<h1 class="about-me">
 				About Me
 			</h1>
-			<p class="about-me">
+			<p>
 				There’s nothing better than starting out with a blank Javascript file and seeing the end result of
 				everything coming together.
 
@@ -119,9 +124,10 @@
 
 		<!-- Footer -->
 		<footer id="footer">
+			<h1 class="about-me">Contact</h1>
 			<div class="inner">
 				<section id="contact-section">
-					<h2>I Look Forward To Hearing From You</h2>
+					<h2>I Look Forward To Hearing From You!</h2>
 					<form method="post" action="mailto:awalker3365@gmail.com" class="contact-form"
 						enctype="multipart/form-data" name="EmailForm">
 						<div class="fields">
@@ -153,16 +159,15 @@
 						</li>
 						<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a>
 						</li> -->
-						<li><a href="https://github.com/Adrian-Walker" class="icon brands style2 fa-github"><span
+						<li><a href="https://github.com/Adrian-Walker" class="icon brands style2 fa-github" target="_blank"><span
 									class="label">GitHub</span></a></li>
-						<li><a href="https://www.linkedin.com/in/walker-adrian/"
+						<li><a href="https://www.linkedin.com/in/walker-adrian/" target="_blank"
 								class="icon brands style2 fa-linkedin"><span class="label">500px</span></a></li>
 						<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
 						<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 				</section>
 				<ul class="copyright">
-					<li>Adrian Walker</li>
 					<li></li>
 				</ul>
 			</div>
