--- a/weather.html
+++ b/weather.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Exercise Tracker</title>
+    <title>Weather App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -41,13 +41,13 @@
         <div id="main" class="pages">
             <div class="inner">
                 <!-- <h1>Project #1</h1> -->
-                <h1>Exercise Tracker</h1>
-                <p>Developed an app that allows exercise trainers to track all of their client’s workouts.</p>
+                <h1>Weather App</h1>
+                <p>I Developed an app that allows you to check the days weather in cities around the world.</p>
 <!-- Screenshot -->
                 <article class="style4">
                     <span class="image">
-                        <a href="https://exercise-tracker22.herokuapp.com/">
-                            <img class="screenshots" src="screenshots/exerciseTracker.png" />
+                        <a href="https://weather-app-ivory-gamma.vercel.app/">
+                            <img class="screenshots" src="screenshots/weather-app.png" />
                         </a>
 
                         <span>
@@ -56,14 +56,10 @@
 <!-- Technologies List -->
                         <ul>
                             <h3>Technologies Used</h3>
-                            <li>Mongoose</li>
-                            <li>Express</li>
                             <li>React</li>
-                            <li>Nodemon</li>
-                            <li>Morgan</li>
-                            <li>Cors</li>
-                            <li>Dotenv</li>
-                            <li>Bootstrap</li>
+                            <li>Axios</li>
+                            <li>Mantine</li>
+                            <li>Node</li>
                         </ul>
                     </span>
 
@@ -72,8 +68,8 @@
                         <div class="content">
                         </div>
                     </a>
-                    <button onclick="location.href='https://exercise-tracker22.herokuapp.com/'">View Live</button>
-                    <button onclick="location.href='https://github.com/Adrian-Walker/exercise-tracker'">View
+                    <button onclick="location.href='https://weather-app-ivory-gamma.vercel.app/'">View Live</button>
+                    <button onclick="location.href='https://github.com/Adrian-Walker/my-weather-app'">View
                         Code</button>
                 </article>
             </div>
