--- a/quote-generator.html
+++ b/quote-generator.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Exercise Tracker</title>
+    <title>Weather App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
             <h2>Menu</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <!-- <li><a href="https://github.com/Adrian-Walker/weather-app">Weather App Repo</a></li> -->
+                <!-- <li><a href="https://github.com/Adrian-Walker/Quote-Generator">Quote Generator Repo</a></li> -->
             </ul>
         </nav>
 
@@ -41,13 +41,12 @@
         <div id="main" class="pages">
             <div class="inner">
                 <!-- <h1>Project #1</h1> -->
-                <h1>Exercise Tracker</h1>
-                <p>Developed an app that allows exercise trainers to track all of their client’s workouts.</p>
-<!-- Screenshot -->
+                <h1>Quote Generator</h1>
+                <p>I Developed an app that generates random inspirational quotes.</P>
                 <article class="style4">
                     <span class="image">
-                        <a href="https://exercise-tracker22.herokuapp.com/">
-                            <img class="screenshots" src="screenshots/exerciseTracker.png" />
+                        <a href="https://candid-trifle-816f4e.netlify.app/">
+                            <img class="screenshots" src="screenshots/quotePic.png" />
                         </a>
 
                         <span>
@@ -56,24 +55,19 @@
 <!-- Technologies List -->
                         <ul>
                             <h3>Technologies Used</h3>
-                            <li>Mongoose</li>
-                            <li>Express</li>
                             <li>React</li>
-                            <li>Nodemon</li>
-                            <li>Morgan</li>
-                            <li>Cors</li>
-                            <li>Dotenv</li>
-                            <li>Bootstrap</li>
+                            <li>Axios</li>
+                            <li>Material UI</li>
                         </ul>
                     </span>
 
 
-                    <a href="https://exercise-tracker22.herokuapp.com/">
+                    <a href="https://candid-trifle-816f4e.netlify.app/">
                         <div class="content">
                         </div>
                     </a>
-                    <button onclick="location.href='https://exercise-tracker22.herokuapp.com/'">View Live</button>
-                    <button onclick="location.href='https://github.com/Adrian-Walker/exercise-tracker'">View
+                    <button onclick="location.href='https://candid-trifle-816f4e.netlify.app/'">View Live</button>
+                    <button onclick="location.href='https://github.com/Adrian-Walker/my-weather-app'">View
                         Code</button>
                 </article>
             </div>
