updated quote generator page

--- a/quote-generator.html
+++ b/quote-generator.html
@@ -45,8 +45,8 @@
                 <p>I Developed an app that generates random inspirational quotes.</P>
                 <article class="style4">
                     <span class="image">
-                        <a href="https://candid-trifle-816f4e.netlify.app/">
-                            <img class="screenshots" src="screenshots/quotePic.png" />
+                        <a href="https://quotes-generator6488.netlify.app/">
+                            <img class="screenshots" src="screenshots/quotes.png" />
                         </a>
 
                         <span>
@@ -62,12 +62,12 @@
                     </span>
 
 
-                    <a href="https://candid-trifle-816f4e.netlify.app/">
+                    <a href="https://quotes-generator6488.netlify.app/">
                         <div class="content">
                         </div>
                     </a>
-                    <button onclick="location.href='https://candid-trifle-816f4e.netlify.app/'">View Live</button>
-                    <button onclick="location.href='https://github.com/Adrian-Walker/my-weather-app'">View
+                    <button onclick="location.href='https://quotes-generator6488.netlify.app/'">View Live</button>
+                    <button onclick="location.href='https://github.com/Adrian-Walker/Quote-Generator'">View
                         Code</button>
                 </article>
             </div>
@@ -75,28 +75,6 @@
             <!-- Footer -->
             <footer id="footer">
                 <div class="inner">
-                    <section id="contact-section">
-                        <h2>I Look Forward To Hearing From You</h2>
-                        <form method="post" action="mailto:awalker3365@gmail.com" class="contact-form"
-                            enctype="multipart/form-data" name="EmailForm">
-                            <div class="fields">
-                                <div class="field half">
-                                    <input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
-                                </div>
-                                <div class="field half">
-                                    <input type="email" name="email" id="email" placeholder="Email"
-                                        autocomplete="off" />
-                                </div>
-                                <input type="hidden" name="_next" value="contact.html">
-                                <div class="field">
-                                    <textarea name="message" id="message" placeholder="Message"
-                                        autocomplete="off"></textarea>
-                                </div>
-                            </div>
-                            <ul class="actions">
-                                <li><input type="submit" value="Send" class="primary" /></li>
-                            </ul>
-                        </form>
                     </section>
                     <section>
                         <h2>Follow</h2>
