--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 				<h1 class="projects">Projects</h1>
 				<section class="tiles">
 
-					<article class="style1">
+					<article class="style2">
 						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
+							<img src="images/pic02.jpg" alt="" />
 						</span>
-						<a href="weather.html">
+						<a href="quote-generator.html">
 							<h2>Quote Generator</h2>
 							<div class="content">
 								<ul class="ranker">
